--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -2,6 +2,7 @@
 <hr />
 <div class="row">
     <div class="col s12 m6">
+        <button class="btn" id="toggle">Add More Pokemon</button>
         <ul id="pokemons-list">
             <% @pokemons.each do |pokemon| %>
                 <li
